--- a/Resources/views/Product/edit.html.twig
+++ b/Resources/views/Product/edit.html.twig
@@ -1,10 +1,11 @@
 {% extends '@BelousProducts/base.html.twig' %}
 {% block body %}
+    <h1>{{ 'product_edit' | trans({}, 'BelousProductsBundle') }}</h1>
     {{ form_start(form) }}
     {{ form_widget(form) }}
 
-    <input type="submit" class="btn" value="Create"/>
+    <input type="submit" class="btn" value="{{ 'edit'| trans({}, 'BelousProductsBundle') }}"/>
     {{ form_end(form) }}
 
-    <a href="{{ path('product_list') }}">{{ 'return_to_list' | trans }}</a>
+    <a href="{{ path('product_list') }}">{{ 'return_to_list'| trans({}, 'BelousProductsBundle')}}</a>
 {% endblock %}
