--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('bundles/belousproducts/css/styles.css')}}">
+    {% endblock %}
 </head>
 <body>
+<ul>
+    <li><a href="{{ path('product_list') }}">{{ 'products'| trans({}, 'BelousProductsBundle') }}</a></li>
+    <li><a href="{{ path('product_type_list') }}">{{ 'product_types' | trans({}, 'BelousProductsBundle') }}</a></li>
+</ul>
 {% block body %}{% endblock %}
 {% block javascripts %}{% endblock %}
 </body>
